log
Fri 10 May 2024 02:59:26 AM UTC: 
 tests:  1|8
total_score: 0/70
47afd25
Fri 10 May 2024 03:10:20 AM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
f5ad1f5
Fri 10 May 2024 03:11:36 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
76478c3
Fri 10 May 2024 03:25:01 AM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:64: error: expected ‘)’ before ‘{’ token
   86 |         if (is_equal(tree, key, tree -> current -> pair -> key)
      |            ~                                                   ^
      |                                                                )
   87 |         {
      |         ~                                                       
treemap.c:90:5: error: expected expression before ‘}’ token
   90 |     }
      |     ^
Compilation failed
c10ccd6
Fri 10 May 2024 03:29:53 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
c5d8d2a
Fri 10 May 2024 03:44:27 AM UTC: 
 treemap.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
2157251
Fri 10 May 2024 03:47:14 AM UTC: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  13|5
total_score: 25/70
8329252
Fri 10 May 2024 03:53:23 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 25/70
32ed0f5
Fri 10 May 2024 03:55:04 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
88811bf
Fri 10 May 2024 04:06:06 AM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:117:1: error: expected ‘(’ before ‘}’ token
  117 | }
      | ^
      | (
Compilation failed
8917a99
Fri 10 May 2024 04:16:43 AM UTC: 
 treemap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
6fe02bf
Fri 10 May 2024 04:24:48 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  17|4
total_score: 35/70
71b84b5
Fri 10 May 2024 04:27:18 AM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:151:28: error: implicit declaration of function ‘mininum’; did you mean ‘minimum’? [-Werror=implicit-function-declaration]
  151 |         TreeNode* minimu = mininum(node -> right);
      |                            ^~~~~~~
      |                            minimum
treemap.c:151:28: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:151:19: error: unused variable ‘minimu’ [-Werror=unused-variable]
  151 |         TreeNode* minimu = mininum(node -> right);
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2b22b32
Fri 10 May 2024 04:30:32 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
ada971f
Sat 11 May 2024 10:13:45 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:191:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  191 |     return pair;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
c535902
Sat 11 May 2024 10:19:56 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:194:20: error: assignment to ‘Pair *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
  194 |             minimo = minimum(node);
      |                    ^
treemap.c:190:11: error: variable ‘minimo’ set but not used [-Werror=unused-but-set-variable]
  190 |     Pair* minimo = NULL;
      |           ^~~~~~
treemap.c:196:1: error: control reaches end of non-void function [-Werror=return-type]
  196 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1e4fca9
Sat 11 May 2024 10:27:23 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
d47f666
